--- a/frontend/pages/show/event/event.wxml
+++ b/frontend/pages/show/event/event.wxml
@@ -5,7 +5,7 @@
   <view id="title-box1">
     <view class="upload_title">标题</view>
   </view>
-  <input style="width: 554rpx; display: block; box-sizing: border-box; left: 24rpx; position: absolute; height: 70rpx; top: 100rpx" class="input" bindinput="handleInputTitle" placeholder="请输入" />
+  <input style="width: 554rpx; display: block; box-sizing: border-box; left: 24rpx; position: absolute; height: 70rpx; top: 100rpx" class="input" bindinput="handleInputTitle" placeholder="请输入" maxlength="32"/>
 </view>
 
 <view class="container_2 overall-outfit">
@@ -23,7 +23,7 @@
 
 <view class="container_3 overall-outfit">
   <view class="upload_title">内容</view>
-  <textarea class="input_text" bindinput="handleInputText" placeholder="请输入"/>
+  <textarea class="input_text" bindinput="handleInputText" placeholder="请输入" maxlength="1024"/>
   <!-- <view class="result">{{inputText}}</view> -->
 </view>
 
