--- a/frontend/pages/generate/add_event/add_event.wxml
+++ b/frontend/pages/generate/add_event/add_event.wxml
@@ -7,3 +7,18 @@
   </view>
 </view>
 
+<view class="container_event">
+  <view class="event-list" style="left: 1rpx;">
+    <block wx:for="{{eventList}}" wx:key="index">
+      <view class="event-item"  data-index="{{item.id}}" bindtap="selectEvent">
+        <image class="event-image {{item.checked ? 'selected' : ''}}" src="/image/generate/events/event_{{index}}.png"></image>
+        <image class="select-icon  {{item.checked ? 'selected' : ''}}" src="/image/generate/check-circle.png"></image>
+        <text class="event-title">{{item.title}}</text>
+      </view>
+    </block>
+  </view>
+</view>
+
+<view class="container_button">
+  <button class="submit" bindtap="handleSubmit">提交</button>
+</view>
