--- a/frontend/pages/generate/generate.wxss
+++ b/frontend/pages/generate/generate.wxss
@@ -102,8 +102,8 @@
 
 .cover-item {
   width: calc(33.3% - 10rpx); /* 每行显示三个cover元素，间隔为10rpx */
-  margin-top: 10rpx; /* 设置底部间距 */
-  box-sizing: border-box; /* 边框盒模型设置为border-box，包括padding和border在内的宽度不会超出设定的宽度 */
+  margin-top: 2rpx; 
+  box-sizing: border-box; 
 }
 
 
@@ -111,14 +111,29 @@
   width: 15vh;
   height: 20vh;
   border-radius: 1vh;
-  margin-bottom: 1vh;
   box-shadow: 0 2rpx 10rpx rgba(0, 0, 0, 0.16);
 }
 
 .cover-image.selected{
+  width: 14vh;
+  height: 19vh;
   border: 0.6vh solid #4095E5; /* 设置边框宽度和颜色 */
   border-radius: 1vh; /* 可选：设置边框圆角 */
   /* padding: 8rpx; 可选：设置内边距，以使内容与边框之间有一些间距 */
+}
+
+.select-icon{
+  position: relative;
+  margin-top: -10vh;
+  margin-bottom: 3vh;
+  margin-left: 4vh;
+  height: 8vh;
+  width: 8vh;
+  z-index: -100;
+}
+
+.select-icon.selected{
+  z-index: 1;
 }
 
 .diary-input{
