--- a/frontend/pages/plan/plan.wxml
+++ b/frontend/pages/plan/plan.wxml
@@ -35,7 +35,11 @@
   <view class="content">
   <view class="plan-list">
     <block wx:for="{{planList}}" wx:key="index">
-      <view class="plan-item"  data-value='{{item}}' bindtap="goToTodoList">{{item}}</view>
+      
+      <view class="plan-item"  data-value='{{item}}' bindtap="goToTodoList">
+        <image src="{{item.icon}}" style="height: 4vh; width: 4vh;"/>
+      <text class="plan-name">{{item.title}}</text>
+      </view>
       <!-- <image class="image-arrow" src="/image/user/arrow.png"></image> -->
       <view class="line"></view>
     </block>
