--- a/frontend/pages/plan/todo/todo.wxss
+++ b/frontend/pages/plan/todo/todo.wxss
@@ -64,8 +64,8 @@
 
 .container_todo{
   position: relative;
-  left: 5%;
-  width: 90%;
+  left: 4%;
+  width: 92%;
   margin-bottom: 3vh;
   margin-top: 3vh;
 }
@@ -73,13 +73,18 @@
 .todo-header {
   font-size: 3vh;
   color: #4095E5;
+  /* margin-left: 1vh; */
 }
-
+.today{
+  margin-top: 1vh;
+  margin-left: 2vh;
+  margin-bottom: 1vh;
+}
 .content {
   height: auto; 
   width: 100%;
   overflow-y: scroll; 
-  background-color: #78beff2c;
+  /* background-color: #78beff2c; */
   margin-top: 2vh;
   border-radius: 1vh;
 }
@@ -104,6 +109,7 @@
   width: 18px;
   height: 18px;
   border-radius: 50%;
+  border-color: #4095E5;
 }
 
 .task_name {
