feat(front): plan page checkbox border

--- a/frontend/pages/plan/plan.wxml
+++ b/frontend/pages/plan/plan.wxml
@@ -19,7 +19,7 @@
           <checkbox-group id="checkbox{{index}}" bindchange="completeTask">
             <checkbox value="{{item.task}}" checked="ture" bindChange="completeTask"></checkbox>
           </checkbox-group>
-          <view class="task_name" style="color: lightgray">{{item.task}}</view>
+          <view class="task_name" style="color: lightgray; text-decoration: line-through;">{{item.task}}</view>
           <view class="left_days" style="color: lightgray">已完成</view>
         </view>
         <view class="line"></view>
