--- a/frontend/pages/generate/add_event/add_event.wxml
+++ b/frontend/pages/generate/add_event/add_event.wxml
@@ -10,8 +10,8 @@
 <view class="container_event">
   <view class="event-list" style="left: 1rpx;">
     <block wx:for="{{eventList}}" wx:key="index">
-      <view class="event-item"  data-index="{{item.id}}" bindtap="selectEvent">
-        <image class="event-image {{item.checked ? 'selected' : ''}}" src="/image/generate/events/event_{{index}}.png"></image>
+      <view class="event-item"  data-index="{{index}}" bindtap="selectEvent">
+        <image class="event-image {{item.checked ? 'selected' : ''}}" src="{{item.imgSrc}}"></image>
         <image class="select-icon  {{item.checked ? 'selected' : ''}}" src="/image/generate/check-circle.png"></image>
         <text class="event-title">{{item.title}}</text>
       </view>
