--- a/frontend/pages/generate/add_event/add_event.wxss
+++ b/frontend/pages/generate/add_event/add_event.wxss
@@ -51,7 +51,7 @@
 .event-item {
   display: flex;
   flex-direction: column;
-  width: calc(50% - 10rpx); /* 每行显示三个元素，间隔为10rpx */
+  width: calc(50% - 40rpx); /* 每行显示三个元素，间隔为10rpx */
   margin-top: 10rpx; /* 设置底部间距 */
   box-sizing: border-box; /* 边框盒模型设置为border-box，包括padding和border在内的宽度不会超出设定的宽度 */
 }
@@ -63,16 +63,7 @@
   margin-bottom: 1vh;
   box-shadow: 0 2rpx 10rpx rgba(0, 0, 0, 0.16);
   z-index: 10;
-}
-
-.event-title{
-  font-size: 1.8vh;
-  white-space: nowrap; /* 防止文本换行 */
-  overflow: hidden;     /* 隐藏超出容器的部分文本 */
-  text-overflow: ellipsis; /* 超出部分显示省略号 */
-  max-width: 300rpx; /* 设置文本容器的最大宽度*/
-  margin-bottom: 1vh;
-  margin-top: 12vh;
+  object-fit: cover;
 }
 
 .event-image.selected{
@@ -81,6 +72,16 @@
   border: 0.5vh solid #4095E5; /* 设置边框宽度和颜色 */
   border-radius: 1vh; /* 可选：设置边框圆角 */
   /* padding: 8rpx; 可选：设置内边距，以使内容与边框之间有一些间距 */
+}
+
+.event-title{
+  font-size: 1.8vh;
+  white-space: nowrap; /* 防止文本换行 */
+  overflow: hidden;     /* 隐藏超出容器的部分文本 */
+  text-overflow: ellipsis; /* 超出部分显示省略号 */
+  max-width: 400rpx; /* 设置文本容器的最大宽度*/
+  margin-bottom: 1vh;
+  margin-top: 12vh;
 }
 
 .select-icon{
@@ -92,7 +93,7 @@
 }
 
 .select-icon.selected{
-  z-index: 1;
+  z-index: 10;
 }
 
 .container-button{
