--- a/frontend/pages/plan/all_plan/all_plan.wxss
+++ b/frontend/pages/plan/all_plan/all_plan.wxss
@@ -1,7 +1,14 @@
+#mainBg {
+  position: absolute;
+  width: 100vw;
+  height: 100vh;
+  background: linear-gradient(to bottom right, blue, pink);
+}
+
 #bar {
   width: 100vw; 
   height: 48px; 
-  background-color: rgba(135, 207, 235, 0.25);
+  background-color: rgb(135, 207, 235);
 
   display: flex;
   flex-direction: row;
@@ -21,18 +28,37 @@
   height: 80px;
   margin-top: 20px;
   box-shadow: 2px 2px 6px lightgray;
+  border: 2px solid skyblue;
   border-radius: 10px;
 
   display: flex;
   flex-direction: row;
   align-items: center;
 
+  backdrop-filter: blur(10px);
   overflow: hidden;
+}
+
+.planIcon {
+  position: absolute;
+  left: 6vw;
+  width: 32px;
+  height: 32px;
+}
+
+.iconBg {
+  position: absolute;
+  left: 6vw;
+  width: 30px;
+  height: 30px;
+
+  background-color: #FFF;
+  border-radius: 50%;
 }
 
 .planName {
   position: absolute;
-  left: 10vw;
+  left: calc(6vw + 42px);
 
   color: #FFF;
   font-size: 24px;
@@ -42,9 +68,18 @@
   -webkit-text-stroke: 0.5rpx #000;
 }
 
+.edit {
+  position: absolute;
+  right: 6vw;
+
+  color: gray;
+  text-shadow: 1px 1px 2px #FFF;
+}
+
 .bgImg {
   position: absolute;
   height: 100%;
   width: calc(100% + 2px);
   opacity: 0.65;
+  /* filter: blur(3px); */
 }
