--- a/frontend/pages/plan/plan.wxml
+++ b/frontend/pages/plan/plan.wxml
@@ -35,17 +35,17 @@
   <view class="content">
   <view class="plan-list">
     <block wx:for="{{planList}}" wx:key="index">
-      
       <view class="plan-item"  data-value='{{item}}' bindtap="goToTodoList">
         <image src="{{item.icon}}" style="height: 4vh; width: 4vh;"/>
-      <text class="plan-name">{{item.title}}</text>
+        <text class="plan-name">{{item.title}}</text>
       </view>
       <!-- <image class="image-arrow" src="/image/user/arrow.png"></image> -->
       <view class="line"></view>
     </block>
+    
     <view class="container_add">
       <view class="add-plan" bindtap="goToAllPlan">
-        <text class="add-text">管理所有计划</text>
+        <text class="add-text">点击查看更多计划</text>
       </view>
       <!-- <input wx:if="{{showInput}}" type="text" class="plan-input" bindblur="addPlan" placeholder="请添加计划"/> -->
     </view>
