--- a/frontend/pages/plan/plan.wxss
+++ b/frontend/pages/plan/plan.wxss
@@ -1,16 +1,35 @@
 /* pages/plan/plan.wxss */
 
+.bgImg {
+  position: absolute;
+  height: 100%;
+  width: calc(100% + 2px);
+  opacity: 0.65;
+  /* filter: blur(3px); */
+}
+
+.placeHolder{
+  height: 10vh;
+}
 .container_todo{
   position: relative;
   left: 5%;
   width: 90%;
   margin-bottom: 3vh;
-  margin-top: 3vh;
+  /* margin-top: 3vh; */
+  top: 3vh;
+  background-color: rgba(240, 242, 243, 0.397);
+  box-shadow: 2px 2px 6px rgb(141, 137, 137);
+  border-radius: 2vh;
+  backdrop-filter: blur(10px);
 }
 
 .todo-header {
+  position: relative;
   font-size: 3vh;
-  color: #4095E5;
+  color: #0759a5;
+  margin-left: 2vh;
+  top: 1vh;
 }
 
 .content {
@@ -55,7 +74,7 @@
   position: absolute;
   right: 5vw;
 
-  color: rgb(150, 150, 150);
+  color: #494955;
   font-size: 15px;
 }
 
@@ -64,14 +83,21 @@
   left: 5%;
   width: 90%;
   margin-bottom: 3vh;
-  margin-top: 4vh;
+  margin-top: 7vh;
+  background-color: rgba(240, 242, 243, 0.397);
+  box-shadow: 2px 2px 6px rgb(141, 137, 137);
+  border-radius: 2vh;
+  backdrop-filter: blur(10px);
 }
 
 .plan-header {
-  display: flex;
+  position: relative;
   width: 70vh;
   font-size: 3vh;
-  color: #4095E5;
+  color: #0759a5;
+  margin-left: 2vh;
+  margin-bottom: 1vh;
+  top: 1vh;
 }
 
 .plan-list {
@@ -86,7 +112,7 @@
   padding: 2vh;
   padding-left: 1vh;
   width: 100%;
-  height: 2vh;
+  height: 1.5vh;
   font-size: large;
   margin-bottom: 1vh;
 }
@@ -95,7 +121,10 @@
   position: relative;
   top: -1vh;
 }
-
+.add-text{
+  color: rgb(56, 98, 109);
+  margin-bottom: 1vh;
+}
 .add-plan{
   padding: 2vh;
   height: 2vh;
@@ -120,7 +149,10 @@
 .image-arrow {
   width: 90rpx;
   height: 90rpx;
-  margin-top: -16rpx;
-  position: absolute;
-  right: 0; /* 靠右调节 */
+  top: -5vh;
+  right: -10px;
+  position: relative;
+  right: 0px; /* 靠右调节 */
+  background-color: aliceblue;
 }
+
