--- a/frontend/pages/plan/todo/todo.wxml
+++ b/frontend/pages/plan/todo/todo.wxml
@@ -1,21 +1,9 @@
 <!--pages/plan/todo/todo.wxml-->
-<!-- <view class='container'>
-  <text class="plan-header">{{planValue}}</text>
-  <view class="list">
-    <checkbox-group wx:for="{{todos}}" wx:for-index="index" wx:key="index" bindchange="toggleComplete">
-      <view class="item">
-        <checkbox value="{{item.value}}"  data-index="index"></checkbox>
-        <text class="{{item.checkd ? 'checkd' : ''}}">{{item.value}}</text>
-        
-      </view>
-      
-    </checkbox-group>
-    
-  </view> -->
-  
+<image src="/image/plan/planBg/beach.jpg" class="bgImg"></image>
+<!-- <view class='placeHolder'></view> -->
   <view class="container_todo">
   <view>
-    <image src="{{icon}}" style="height: 5vh; width: 5vh; top: 1.5vh; position: relative;"/>
+    <image src="{{icon}}" style="height: 5vh; width: 5vh; top: 1.5vh; position: relative; left: 0.5vh;"/>
     <text class="todo-header"> {{planValue}}</text>
 
   </view>
@@ -35,7 +23,7 @@
           {{item.ddl}}</view>
           <view class="left_days" wx:else>{{item.ddl}}</view>
             <view class="delete-btn" bindtap="deleteTodo" data-index="{{index}}">
-            <image src="/image/plan/trash.png" style="height: 3vh; width: 3vh;opacity: 0.3;"/>
+            <image src="/image/plan/trash.png" style="height: 3vh; width: 3vh;opacity: 0.7;"/>
             </view>
           <!-- <view class='edit-todo' bindtap="editTodo" data-index="{{index}}">
             <image src="/image/user/about_us.png" style="height: 4vh; width: 4vh;opacity: 1;"/>
@@ -54,13 +42,13 @@
           <checkbox-group id="checkbox{{index}}" bindchange="checkTask">
             <checkbox value="{{item.task}}" checked="ture" bindChange="checkTask"></checkbox>
           </checkbox-group>
-          <view class="task_name" style="color: lightgray; text-decoration: line-through;">{{item.task}}</view>
-          <view class="left_days" style="color: lightgray">已完成</view>
+          <view class="task_name" style="color: rgb(70, 101, 109); text-decoration: line-through;">{{item.task}}</view>
+          <view class="left_days" style="color: rgb(70, 101, 109)">已完成</view>
           <view class="delete-btn" bindtap="deleteTodo" data-index="{{index}}">
-          <image src="/image/plan/trash.png" style="height: 3vh; width: 3vh;opacity: 0.3;"/>
+          <image src="/image/plan/trash.png" style="height: 3vh; width: 3vh;opacity: 0.4;"/>
         </view>
         <view class='edit-todo' bindtap="editTodo" data-index="{{index}}">
-          <image src="/image/user/about_us.png" style="height: 4vh; width: 4vh;opacity: 0.3;"/>
+          <image src="/image/user/about_us.png" style="height: 4vh; width: 4vh;opacity: 0.6;"/>
         </view>
         </view>
         <view class="line"></view>
