--- a/frontend/pages/plan/plan.wxml
+++ b/frontend/pages/plan/plan.wxml
@@ -1,6 +1,6 @@
 <!--pages/plan/plan.wxml-->
 <image src="/image/plan/planBg/beach.jpg" class="bgImg"></image>
-<!-- <view class='placeHolder'></view> -->
+<view class='placeHolder'></view>
 <view class="container_todo">
   <text class="todo-header"> 七天内的TODO</text>
   <view class="content" scroll-y="true">
@@ -53,4 +53,20 @@
     </view>
   </view>
 </view>
+</view>
+
+
+<view class='custom-tabbar'>
+  <view class='icons'>
+    <image src="/image/tabBar/home.png" style="height: 4vh; width: 4vh" bind:tap="goToShow"></image>
+    <image src="/image/tabBar/plan_selected.png" style="height: 4vh; width: 4vh" bind:tap="goToPlan"></image>
+    <image src="/image/tabBar/export.png" style="height: 4vh; width: 4vh" bind:tap="goToGenerate"></image>
+    <image src="/image/tabBar/user.png" style="height: 4vh; width: 4vh" bind:tap="goToUser"></image>
+  </view>
+  <view class='icons-text'>
+    <text>主页</text>
+    <text class='selected-text'>计划</text>
+    <text>导出</text>
+    <text>我的</text>
+  </view>
 </view>
