--- a/frontend/pages/plan/plan.wxss
+++ b/frontend/pages/plan/plan.wxss
@@ -156,3 +156,41 @@
   background-color: aliceblue;
 }
 
+
+.custom-tabbar{
+  display: flex;
+  flex-direction: column;
+  position: fixed;
+  bottom: 0vh;
+  margin-left: 5%;
+  width: 90%;
+  backdrop-filter: blur(10px);
+  background-color: rgba(240, 242, 243, 0.3);
+  border-radius: 20px;
+  margin-bottom: 3vh;
+}
+
+.icons {
+  display: flex;
+  flex-direction: row;
+  margin-top: 1vh;
+  margin-left: 10%;
+  width: 80%;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.icons-text {
+  font-size: 1.3vh;
+  display: flex;
+  flex-direction: row;
+  margin-left: 11.5%;
+  width: 77%;
+  align-items: center;
+  justify-content: space-between;
+  margin-bottom: 1vh;
+}
+
+.selected-text{
+  color: #0759a5;
+}
