--- a/frontend/pages/plan/todo/todo.wxml
+++ b/frontend/pages/plan/todo/todo.wxml
@@ -3,7 +3,7 @@
 <!-- <view class='placeHolder'></view> -->
   <view class="container_todo">
   <view>
-    <image src="{{icon}}" style="height: 5vh; width: 5vh; top: 1.5vh; position: relative; left: 0.5vh;"/>
+    <image src="{{icon}}" style="height: 5vh; width: 5vh; top: 1.5vh; position: relative; margin-left: 3vh;"/>
     <text class="todo-header"> {{planValue}}</text>
 
   </view>
