--- a/frontend/pages/plan/plan.wxml
+++ b/frontend/pages/plan/plan.wxml
@@ -1,5 +1,5 @@
 <!--pages/plan/plan.wxml-->
-<image src="/image/plan/planBg/beach.jpg" class="bgImg"></image>
+<!-- <image src="/image/plan/planBg/beach.jpg" class="bgImg"></image> -->
 <!-- <view class='placeHolder'></view> -->
 <view class="container_todo">
   <text class="todo-header"> 七天内的TODO</text>
