--- a/frontend/pages/plan/todo/todo.wxss
+++ b/frontend/pages/plan/todo/todo.wxss
@@ -38,7 +38,10 @@
   border-radius: 1vh;
   font-size: 1.6vh;
 }
+.add-text{
+  font-size: 2vh;
 
+}
 .add-todo {
   width: 90vw;
   position: relative;
@@ -130,7 +133,9 @@
 .task_name {
   position: relative;
   left: 1vw;
-  font-size: 16px;
+  /* font-size: 16px; */
+  font-size: 2vh;
+
 }
 
 .left_days {
@@ -138,7 +143,8 @@
   margin-top: 7vw;
   left: 5vw;
   color: #494955;
-  font-size: 15px;
+  /* font-size: 15px; */
+  font-size: 2vh;
 }
 
 .line {
