--- a/frontend/pages/plan/todo/todo.wxml
+++ b/frontend/pages/plan/todo/todo.wxml
@@ -1,5 +1,5 @@
 <!--pages/plan/todo/todo.wxml-->
-<image src="/image/plan/planBg/beach.jpg" class="bgImg"></image>
+<image src="/image/plan/planBg/bg9.jpg" class="bgImg"></image>
 <!-- <view class='placeHolder'></view> -->
   <view class="container_todo">
   <view>
