--- a/frontend/pages/show/show.wxss
+++ b/frontend/pages/show/show.wxss
@@ -19,6 +19,7 @@
   height: 50px;
   box-shadow: 0 2rpx 10rpx rgba(0, 0, 0, 0.16);
   border-radius: 100rpx;
+  background-color: rgba(255, 255, 255, 0.63);
 }
 
 .overlay {
