--- a/frontend/pages/show/text_detail/text_detail.wxss
+++ b/frontend/pages/show/text_detail/text_detail.wxss
@@ -51,11 +51,20 @@
   font-size: 1.1em;
 }
 
-.date-container{
+.date-delete-container{
   width: 100%;
   height: 100%;
   font-size: 0.9em;
-  color: #888;
   margin-top: 2vh;
   margin-bottom: 4vh;
+  display: flex;
+  gap: 5vw;
+}
+
+.date-container{
+  color: #888;
+}
+
+.delete-container{
+  color: rgb(27,52,113);
 }
