--- a/frontend/pages/plan/create_plan/create_plan.wxml
+++ b/frontend/pages/plan/create_plan/create_plan.wxml
@@ -19,17 +19,12 @@
 </view>
 
 <view class="container_3 overall-outfit">
-  <view class="upload_title">选择tag</view>
-  <view class="container_tag">
-    <view wx:for="{{tags}}" wx:key="index" data-index='{{index}}' class="tag {{item.checked ? 'selected' : ''}}" bindtap="toggleTag">
-      <text class="tag-text">{{item.info}}</text>
-    </view>
-    <view class="add-tag" bindtap="showInput">
-      <text class="add-icon">+</text>
-      <text class="add-text">tag</text>
-    </view>
-    <input wx:if="{{showInput}}" type="text" class="tag-input" bindblur="addTag" placeholder="请输入标签" />
-    <!-- <text class="tag-text">{{selectedTags}}</text> -->
+  <text class="upload_title">选择icon</text>
+  <image  src="{{iconList[selected_icon_index]}}" style="position: relative; height: 5vh; width: 5vh; top: 1vh; left: 2vh;" />
+  <view  class="icon-container">
+    <view wx:for="{{iconList}}" wx:key="index" data-index='{{index}}' class="icon-item{{index==selected_icon_index ? '-hover' : ''}} " bind:tap="iconChange" >
+    <image class="picker-icon" src="{{item}}" style="height: 5vh; width: 5vh;" />
+  </view>
   </view>
 </view>
 
