--- a/frontend/pages/plan/create_plan/create_plan.wxss
+++ b/frontend/pages/plan/create_plan/create_plan.wxss
@@ -1,7 +1,7 @@
 /* pages/show/event/event.wxss */
 .whole-page-grid{
   display: grid;
-  grid-template-rows: 10vh 1fr 30vh 10vh 1fr;
+  grid-template-rows: 10vh 20vh 1fr 10vh 10vh;
   grid-template-columns: 1fr;
   grid-template-areas:
   "A"
@@ -185,3 +185,29 @@
   box-shadow: 0 10rpx 10rpx rgba(0, 0, 0, 0.16);
   font-size: 14px;
 }
+.icon-container {
+  margin-top: 4vh;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.icon-item {
+  margin-right: 2vh;
+  margin-bottom: 1vh;
+}
+
+.icon-item-hover {
+  margin-right: 2vh;
+  margin-bottom: 1vh;
+  background-color: rgba(187, 190, 190, 0.397);
+  /* box-shadow: 2px 2px 6px rgb(141, 137, 137); */
+  border-radius: 1vh;
+  backdrop-filter: blur(10px);
+}
+
+.picker-icon {
+  height: 7vh;
+  width: 7vh;
+}
+
+
